--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^19.1.1",
+    "@react-native-firebase/auth": "^19.1.1",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^49.0.23",
+    "expo-dev-client": "~2.4.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
